Update code to 1.19.2